<resources>
    <string name="app_name">Secure Notes</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">LogIn</string>
    <string name="register">Register</string>
    <string name="email">E-mail</string>
    <string name="bt_register">Register</string>
    <string name="al_register">Already have an account, <b>Log in</b></string>
    <string name="sign_up">Sign Up</string>
    <string name="fingerprint_confirm">Use fingerprint for future</string>
    <string name="shared_preference">data</string>


    <string name="prompt_alias">Title</string>
    <string name="prompt_secret">Content</string>

    <string name="edit">edit</string>
    <string name="delete">delete</string>
    <string name="save">save</string>
    <string name="update">update</string>
    <string name="fp_true">fp_true</string>
    <string name="fp_false">fp_false</string>
    <string name="msg_no_notes">No notes found!</string>
    <string name="password_empty">Password can\'t be empty</string>
    <string name="password_no_match">Passwords do not match</string>
    <string name="password_wrong">Wrong Password</string>

    <string name="fingerprint">fingerprint</string>
    <string name="first_run">first_run</string>
    <string name="use_fingerprint_future">use_fingerprint_future</string>
    <string name="fingerprint_description">Confirm fingerprint to continue</string>
    <string name="fingerprint_hint_dialog">Touch fingerprint sensor</string>
    <string name="fingerprint_hint">Touch fingerprint sensor \n to verify your identity</string>

    <string name="password_description">Enter your password to continue</string>

    <string name="cancel">Cancel</string>
    <string name="use_password">Use password</string>
    <string name="sign_in">Authenticate</string>
    <string name="ok">OK</string>


    <string name="fingerprint_not_recognized">Fingerprint not recognized. Try again</string>
    <string name="fingerprint_success">Fingerprint recognized</string>

    <string name="new_fingerprint_enrolled_description">A new fingerprint was added to this device, so your password is required.</string>
    <string name="use_fingerprint_in_future">Use fingerprint in future</string>
    <string name="description_fingerprint_icon">Fingerprint icon</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_about">About Us</string>
    <string name="selected">selected</string>
    <string name="arrow_down">Arrow Down</string>
    <string name="to_edit_click_the_edit_icon_in_the_top_right_corner">To Edit, click the edit icon in the top right corner</string>

</resources>
