<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:text="@string/app_name"
        android:textStyle="bold"
        android:textColor="@color/light_black"
        android:textAlignment="center"
        android:textSize="40sp" />
    <android.support.constraint.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_gravity="center"
        tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:divider="@drawable/spacer"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp"
            android:showDividers="middle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">





            <android.support.design.widget.TextInputLayout
                android:id="@+id/pwdInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/ErrorText"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionGo"
                    android:inputType="textPassword" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/repwdInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/ErrorText"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/second_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionGo"
                    android:inputType="textPassword" />

            </android.support.design.widget.TextInputLayout>

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fingerprint_confirm" />




            <ProgressBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"/>



                <Button
                    android:id="@+id/button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="0dp"
                    android:background="@color/colorPrimary"
                    android:text="@string/register"
                    android:textAllCaps="false"
                    android:onClick="clickF"
                    android:textColor="@color/white" />


        </LinearLayout>

    </android.support.constraint.ConstraintLayout>

    </LinearLayout>
</ScrollView>