<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/secretRootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.NoteListAcitivity">

    <LinearLayout
        android:animateLayoutChanges="true"
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/aliasInputView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/noteTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_alias"
                android:imeActionId="5"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"
                 />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/dateView"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textStyle="italic"
            tools:visibility="visible"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"/>

        <View
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            tools:visibility="visible"
            android:visibility="gone"
            android:id="@+id/secretDividerView"
            android:background="@color/dividerColor"
            android:layout_width="match_parent" android:layout_height="1dp"
            android:layout_marginBottom="8dp"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/secretInputView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/noteText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_secret" />


        </android.support.design.widget.TextInputLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:id="@+id/guide"
            android:visibility="invisible"
            android:textAlignment="center"
            android:text="@string/to_edit_click_the_edit_icon_in_the_top_right_corner"/>
    </LinearLayout>


</ScrollView>